# odbc-rs-sqlite

./: Cargo.toml  README.md
src/: connection.rs  lib.rs  odbc.rs
src/odbc/: api.rs  def.rs  implementation.rs  utils.rs
src/odbc/api/: sqlallochandle.rs  sqlbindcol.rs  sqlbindparameter.rs  sqlbrowseconnect.rs  sqlbulkoperations.rs  sqlcancel.rs  sqlcancelhandle.rs  sqlclosecursor.rs  sqlcolattribute.rs  sqlcolumnprivileges.rs  sqlcolumns.rs  sqlcompleteasync.rs  sqlconnect.rs  sqlcopydesc.rs  sqldescribecol.rs  sqldescribeparam.rs  sqldisconnect.rs  sqlendtran.rs  sqlexecdirect.rs  sqlexecute.rs  sqlfetch.rs  sqlfetchscroll.rs  sqlforeignkeys.rs  sqlfreehandle.rs  sqlfreestmt.rs  sqlgetconnectattr.rs  sqlgetcursorname.rs  sqlgetdata.rs  sqlgetdescfield.rs  sqlgetdescrec.rs  sqlgetdiagfield.rs  sqlgetdiagrec.rs  sqlgetenvattr.rs  sqlgetfunctions.rs  sqlgetinfo.rs  sqlgetstmtattr.rs  sqlgettypeinfo.rs  sqlmoreresults.rs  sqlnativesql.rs  sqlnumparams.rs  (+19 more)
src/odbc/def/: c_data_type.rs
src/odbc/implementation/: alloc_handles.rs  connect.rs  env_attrs.rs  getdata.rs  implementation.rs
